--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "todolist-v1",
+  "name": "todolist",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.5"
   },
   "devDependencies": {},
   "scripts": {
@@ -13,5 +15,8 @@
   },
   "keywords": [],
   "author": "Ankit Goel",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "12.18.4"
+  }
 }
